# coasys

./: .gitignore  CLAUDE.md  README.md  TODO.md  coasys.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DASHBOARD.md  OPERATIONS.md  PLAYBOOKS.md  README.md  RELEASE_CHECKLIST.md  STATE_AND_REPORTING.md  TROUBLESHOOTING.md  WEAVE_GRAMMAR.md  WEAVE_LANGUAGE.md
examples/: coasys.weave.yml  flux-launcher.weave.yml
scripts/: verify_release.sh
src/coasys_ops/: __init__.py  api.py  classify.py  cli.py  config.py  detect.py  github_api.py  gitops.py  models.py  ops.py  store.py
src/coasys_ops/static/: app.js  index.html  styles.css  we-theme.css  weave.js
src/coasys_ops/weave/: __init__.py  cli.py  deploy.py  export.py  graph.py  loader.py  model.py  scaffold.py  seed.py  validate.py  writer.py
tests/: conftest.py  test_api.py  test_classify.py  test_cli.py  test_config.py  test_detect.py  test_docs.py  test_ops.py  test_release_assets.py  test_store.py  test_weave.py
