[project]
name = "coasys-ops"
version = "0.1.0"
description = "Local-first Coasys repository operations dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.121.0",
  "pydantic>=2.12.0",
  "pyyaml>=6.0.2",
  "typer>=0.20.0",
  "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.0",
]

[project.scripts]
coasys = "coasys_ops.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coasys_ops"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
